fix some bug on mobile and tablet

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -30,6 +30,7 @@ html {
     display: inline-block;
     margin-top: 15px;
     border: none;
+    appearance: none;
 }
 
 .pull-right {
@@ -215,6 +216,7 @@ html {
 #slider .text-description {
     font-size: 15px;
     margin-top: 25px;
+    text-shadow: 0 0 1px #000;
 }
 
 /* conten section */
